--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "eu_rea",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://graf-sng.github.io/eu_rea/",
   "dependencies": {
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
